--- a/app/Resources/views/mobile.html.twig
+++ b/app/Resources/views/mobile.html.twig
@@ -4,13 +4,15 @@
 	    <meta charset="utf-8">
         <title>{% block title %}Gospel Center{% endblock %}</title>
         <meta name="description" content="Gospel Center">
-    	<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     	<meta name="apple-mobile-web-app-capable" content="yes">
     	<meta name="mobile-web-app-capable" content="yes">
     	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-    	<meta content="initial-scale=1, minimum-scale=1, user-scalable=no, maximum-scale=1, width=device-width, minimal-ui" name="viewport">
+    	<meta name="viewport" content="initial-scale=1, minimum-scale=1, user-scalable=no, maximum-scale=1, width=device-width, minimal-ui">
     	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-        <link rel="icon" type="image/png" href="images/favicon.png" />
+    	<link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" href="../images/favicon.png" />
+        <link rel="icon" sizes="196x196" href="../images/icon_android_HD.png">
+        <link rel="icon" sizes="128x128" href="../images/icon_android.png">
         
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/mobile.css') }}" type="text/css" />
