--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -93,8 +93,8 @@
                     
                 {% endfor %}
                 
-                <a href="{{ path('gospelcenterMedia_center', {'center': center.ref}) }}" class="more 16_9height" data-ratio="0.85">
-                    <div class="16_9height">
+                <a href="{{ path('gospelcenterMedia_center', {'center': center.ref}) }}" class="more resize16_9height" data-ratio="0.85">
+                    <div class="resize16_9height">
                         <span>More</span>
                     </div>
                 </a>
