--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -2,7 +2,8 @@
     <section id="page" class="simple about">
     
         <h1>A propos</h1>
-        <h2>Découvrez un mode de vie positif, pratique, puissant, basé sur Jésus au travers de la Bible.</h2>
+        <h2>Découvrez un mode de vie positif, pratique, puissant,
+        basé sur Jésus au travers de la Bible.</h2>
         
         {% include "@gospelcenterPage/StaticPage/"~ center.ref ~"/"~ language ~"/about_nav.html.twig" %}
         
