--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/music.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/music.html.twig
@@ -3,7 +3,8 @@
     
         <h1>Gospel Center Band</h1>
         
-        <h2>Le groupe désire encourager le corps de Christ par une louange dynamique de qualité, positive et puissante.</h2>
+        <h2>Le groupe désire encourager le corps de Christ par une
+louange dynamique de qualité, positive et puissante.</h2>
         
         {#<div id="left" class="arrow"></div>#}
         
