--- a/src/gospelcenter/PageBundle/Resources/views/admin.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/admin.html.twig
@@ -25,6 +25,7 @@
     	<ul>
     		<li><a href="{{ path('gospelcenterAdmin_pages', {'center': center.ref}) }}" {% if tab == 'pages' %}class="current"{% endif %}>Pages</a></li>
     		<li><a href="{{ path('gospelcenterAdmin_slides', {'center': center.ref}) }}" {% if tab == 'slides' %}class="current"{% endif %}>Slides</a></li>
+    		<li><a href="{{ path('gospelcenterAdmin_youth', {'center': center.ref}) }}" {% if tab == 'youth' %}class="current"{% endif %}>Youth</a></li>
     	</ul>
     </nav>
     
