--- a/web/css/event.css
+++ b/web/css/event.css
@@ -1,161 +1,1 @@
-#container article.event {
-  max-width: 1024px;
-  margin: 40px auto 0px;
-  height: 100%;
-  overflow: hidden; }
-  @media only screen and (min-width: 1441px) {
-    #container article.event {
-      max-width: 1100px; } }
-  @media only screen and (min-width: 1701px) {
-    #container article.event {
-      max-width: 1150px; } }
-  @media only screen and (min-width: 1921px) {
-    #container article.event {
-      max-width: 1300px; } }
-  #container article.event .labelOn {
-    color: lightgrey !important; }
-  #container article.event h1,
-  #container article.event input[name=title],
-  #container article.event #gospelcenter_eventsbundle_event_title {
-    font-size: 2em;
-    border: none;
-    outline: none;
-    font-weight: 100;
-    margin: 0px 0px 40px;
-    display: block;
-    color: #363331;
-    text-align: center;
-    width: 100%;
-    resize: none;
-    white-space: normal;
-    word-wrap: normal;
-    font-family: "Radikal-Light", "Radikal", sans-serif;
-    background-color: transparent; }
-  #container article.event header {
-    width: auto;
-    overflow: hidden;
-    height: 300px;
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    z-index: 10; }
-    @media only screen and (min-width: 1441px) {
-      #container article.event header {
-        height: 350px; } }
-    @media only screen and (min-width: 1701px) {
-      #container article.event header {
-        height: 400px; } }
-    @media only screen and (min-width: 1921px) {
-      #container article.event header {
-        height: 515px; } }
-    #container article.event header img {
-      width: 100%;
-      min-width: 1100px;
-      left: 0px;
-      height: auto; }
-  #container article.event section {
-    margin-top: 330px;
-    display: block; }
-    @media only screen and (min-width: 1441px) {
-      #container article.event section {
-        margin-top: 380px; } }
-    @media only screen and (min-width: 1701px) {
-      #container article.event section {
-        margin-top: 430px; } }
-    @media only screen and (min-width: 1921px) {
-      #container article.event section {
-        margin-top: 545px; } }
-  #container article.event section.txt {
-    float: left;
-    width: 65%; }
-    #container article.event section.txt sumary,
-    #container article.event section.txt textarea[name=intro_text],
-    #container article.event section.txt #gospelcenter_eventsbundle_event_introText {
-      font-weight: 100;
-      font-family: "Radikal-Bold", "Radikal", sans-serif;
-      text-align: justify;
-      display: block;
-      margin-bottom: 15px;
-      width: 100%;
-      border: none;
-      outline: none;
-      resize: none;
-      white-space: normal;
-      word-wrap: normal;
-      background-color: transparent; }
-    #container article.event section.txt p,
-    #container article.event section.txt textarea[name=full_text],
-    #container article.event section.txt #gospelcenter_eventsbundle_event_text {
-      text-align: justify;
-      display: block;
-      width: 100%;
-      border: none;
-      outline: none;
-      margin-bottom: 0px;
-      resize: none;
-      white-space: normal;
-      word-wrap: normal;
-      background-color: transparent;
-      padding-bottom: 20px; }
-  #container article.event section.details {
-    float: right;
-    width: 32%;
-    border: 2px solid #d91a15;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px;
-    padding-bottom: 10px; }
-    #container article.event section.details time {
-      display: block;
-      text-align: center;
-      width: 100%;
-      margin: 0px;
-      width: auto;
-      padding: 5px;
-      font-size: 1.6em;
-      background-color: #d91a15;
-      color: #fdfdfc; }
-      #container article.event section.details time select {
-        background: transparent;
-        line-height: 1;
-        border: 0;
-        border-radius: 0;
-        height: 34px;
-        -webkit-appearance: none;
-        outline: none;
-        color: #fdfdfc;
-        font-size: 1em;
-        font-weight: 100; }
-    #container article.event section.details h1,
-    #container article.event section.details input[name=locationName],
-    #container article.event section.details #gospelcenter_eventsbundle_event_location_name {
-      font-size: 1.5em;
-      padding: 10px 4%;
-      margin: 0px;
-      text-align: left;
-      background-color: transparent;
-      width: 100%;
-      border: none;
-      outline: none;
-      margin-bottom: 0px;
-      resize: none;
-      white-space: normal;
-      word-wrap: normal; }
-    #container article.event section.details p,
-    #container article.event section.details input {
-      padding: 0 4%;
-      background-color: transparent;
-      width: 100%;
-      border: none;
-      outline: none;
-      margin-bottom: 0px;
-      resize: none;
-      white-space: normal;
-      word-wrap: normal; }
-  #container article.event nav {
-    text-align: right;
-    margin-top: 10px;
-    display: block;
-    float: right; }
+#container article.event{max-width:1024px;margin:40px auto 0px;height:100%;overflow:hidden}@media only screen and (min-width: 1441px){#container article.event{max-width:1100px}}@media only screen and (min-width: 1701px){#container article.event{max-width:1150px}}@media only screen and (min-width: 1921px){#container article.event{max-width:1300px}}#container article.event .labelOn{color:#d3d3d3 !important}#container article.event h1,#container article.event input[name=title],#container article.event #gospelcenter_eventsbundle_event_title{font-size:2em;border:none;outline:none;font-weight:100;margin:0px 0px 40px;display:block;color:#363331;text-align:center;width:100%;resize:none;white-space:normal;word-wrap:normal;font-family:"Radikal-Light","Radikal",sans-serif;background-color:transparent}#container article.event header{width:auto;overflow:hidden;height:300px;position:absolute;left:0px;width:100%;z-index:10}@media only screen and (min-width: 1441px){#container article.event header{height:350px}}@media only screen and (min-width: 1701px){#container article.event header{height:400px}}@media only screen and (min-width: 1921px){#container article.event header{height:515px}}#container article.event header img{width:100%;min-width:1100px;left:0px;height:auto}#container article.event section{margin-top:330px;display:block}@media only screen and (min-width: 1441px){#container article.event section{margin-top:380px}}@media only screen and (min-width: 1701px){#container article.event section{margin-top:430px}}@media only screen and (min-width: 1921px){#container article.event section{margin-top:545px}}#container article.event section.txt{float:left;width:65%}#container article.event section.txt sumary,#container article.event section.txt textarea[name=intro_text],#container article.event section.txt #gospelcenter_eventsbundle_event_introText{font-weight:100;font-family:"Radikal-Bold","Radikal",sans-serif;text-align:justify;display:block;margin-bottom:15px;width:100%;border:none;outline:none;resize:none;white-space:normal;word-wrap:normal;background-color:transparent}#container article.event section.txt p,#container article.event section.txt textarea[name=full_text],#container article.event section.txt #gospelcenter_eventsbundle_event_text{text-align:justify;display:block;width:100%;border:none;outline:none;margin-bottom:0px;resize:none;white-space:normal;word-wrap:normal;background-color:transparent;padding-bottom:20px}#container article.event section.details{float:right;width:32%;border:2px solid #d91a15;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;padding-bottom:10px}#container article.event section.details time{display:block;text-align:center;width:100%;margin:0px;width:auto;padding:5px;font-size:1.6em;background-color:#d91a15;color:#fdfdfc}#container article.event section.details time select{background:transparent;line-height:1;border:0;border-radius:0;height:34px;-webkit-appearance:none;outline:none;color:#fdfdfc;font-size:1em;font-weight:100}#container article.event section.details h1,#container article.event section.details input[name=locationName],#container article.event section.details #gospelcenter_eventsbundle_event_location_name{font-size:1.5em;padding:10px 4%;margin:0px;text-align:left;background-color:transparent;width:100%;border:none;outline:none;margin-bottom:0px;resize:none;white-space:normal;word-wrap:normal}#container article.event section.details p,#container article.event section.details input{padding:0 4%;background-color:transparent;width:100%;border:none;outline:none;margin-bottom:0px;resize:none;white-space:normal;word-wrap:normal}#container article.event nav{text-align:right;margin-top:10px;display:block;float:right}
