--- a/web/css/events.css
+++ b/web/css/events.css
@@ -1,46 +1,1 @@
-#container article.events {
-  max-width: 1024px;
-  margin: 30px auto 50px;
-  overflow: auto; }
-  @media only screen and (min-width: 1441px) {
-    #container article.events {
-      max-width: 1100px; } }
-  @media only screen and (min-width: 1701px) {
-    #container article.events {
-      max-width: 1150px; } }
-  @media only screen and (min-width: 1921px) {
-    #container article.events {
-      max-width: 1300px; } }
-  #container article.events:nth-child(odd) section.picture {
-    float: left; }
-  #container article.events:nth-child(odd) section.detail {
-    float: right;
-    padding-left: 2%; }
-  #container article.events:nth-child(even) section.picture {
-    float: right; }
-  #container article.events:nth-child(even) section.detail {
-    float: left;
-    padding-right: 3%; }
-  #container article.events section.picture {
-    width: 64%;
-    display: block; }
-    #container article.events section.picture img {
-      width: 100%; }
-  #container article.events section.detail {
-    display: block;
-    width: 33%; }
-    #container article.events section.detail h1 {
-      margin-top: 30px;
-      margin-bottom: 5px; }
-    #container article.events section.detail time {
-      color: #878787;
-      display: block;
-      font-size: 0.8em; }
-    #container article.events section.detail sumary {
-      margin-top: 15px;
-      font-size: 1.1em;
-      display: block;
-      margin-bottom: 20px;
-      text-align: justify; }
-    #container article.events section.detail p {
-      text-align: center; }
+#container article.events{max-width:1024px;margin:30px auto 50px;overflow:auto}@media only screen and (min-width: 1441px){#container article.events{max-width:1100px}}@media only screen and (min-width: 1701px){#container article.events{max-width:1150px}}@media only screen and (min-width: 1921px){#container article.events{max-width:1300px}}#container article.events:nth-child(odd) section.picture{float:left}#container article.events:nth-child(odd) section.detail{float:right;padding-left:2%}#container article.events:nth-child(even) section.picture{float:right}#container article.events:nth-child(even) section.detail{float:left;padding-right:3%}#container article.events section.picture{width:64%;display:block}#container article.events section.picture img{width:100%}#container article.events section.detail{display:block;width:33%}#container article.events section.detail h1{margin-top:30px;margin-bottom:5px}#container article.events section.detail time{color:#878787;display:block;font-size:0.8em}#container article.events section.detail sumary{margin-top:15px;font-size:1.1em;display:block;margin-bottom:20px;text-align:justify}#container article.events section.detail p{text-align:center}
