--- a/web/css/form.css
+++ b/web/css/form.css
@@ -1,85 +1,1 @@
-form input,
-form textarea {
-  resize: none;
-  white-space: normal;
-  word-wrap: normal;
-  font-family: "Radikal-Light", "Radikal", sans-serif;
-  background-color: transparent;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  outline: none;
-  border: 1px solid #878787;
-  min-height: 25px;
-  padding: 2px 4px 2px 5px;
-  font-size: 1.1em; }
-  form input.writeOn,
-  form textarea.writeOn {
-    background-color: transparent;
-    border: none;
-    margin: 1px;
-    color: #363331; }
-  form input.writeOff,
-  form textarea.writeOff {
-    background-color: white;
-    border: 1px solid #878787;
-    margin: 0px;
-    color: #878787; }
-  form input[type=submit],
-  form textarea[type=submit] {
-    background-color: transparent;
-    cursor: pointer;
-    border: 1px solid #d91a15;
-    font-family: "Radikal", sans-serif;
-    color: #d91a15; }
-  form input[type=file],
-  form textarea[type=file] {
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-    outline: none; }
-form #editImage {
-  display: block;
-  width: auto;
-  cursor: pointer;
-  margin: 0 auto 40px; }
-  form #editImage div.edit {
-    text-align: center;
-    height: 20px;
-    background-color: #363331;
-    color: #fdfdfc;
-    display: none;
-    position: relative;
-    width: auto;
-    margin-top: -30px;
-    padding-top: 5px;
-    padding-bottom: 5px; }
-  form #editImage img {
-    width: 100%;
-    height: inherit;
-    max-height: inherit;
-    min-height: inherit; }
-  form #editImage:hover div.edit {
-    display: block; }
-form #addImage {
-  display: block;
-  width: 300px;
-  border: 2px dashed #878787;
-  cursor: pointer; }
-  form #addImage.hover {
-    border-color: #d91a15;
-    color: #d91a15; }
-    form #addImage.hover .iconImg {
-      background-image: url("../images/add_image_hover.svg"); }
-  form #addImage .iconImg {
-    display: block;
-    margin: 20px auto 10px;
-    height: 64px;
-    width: 64px;
-    background-image: url("../images/add_image.svg");
-    background-size: 100%; }
-  form #addImage .txt {
-    text-align: center;
-    margin-bottom: 20px; }
+form input,form textarea{resize:none;white-space:normal;word-wrap:normal;font-family:"Radikal-Light","Radikal",sans-serif;background-color:transparent;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;outline:none;border:1px solid #878787;min-height:25px;padding:2px 4px 2px 5px;font-size:1.1em}form input.writeOn,form textarea.writeOn{background-color:transparent;border:none;margin:1px;color:#363331}form input.writeOff,form textarea.writeOff{background-color:white;border:1px solid #878787;margin:0px;color:#878787}form input[type=submit],form textarea[type=submit]{background-color:transparent;cursor:pointer;border:1px solid #d91a15;font-family:"Radikal",sans-serif;color:#d91a15}form input[type=file],form textarea[type=file]{background-color:transparent;cursor:pointer;border:none;outline:none}form #editImage{display:block;width:auto;cursor:pointer;margin:0 auto 40px}form #editImage div.edit{text-align:center;height:20px;background-color:#363331;color:#fdfdfc;display:none;position:relative;width:auto;margin-top:-30px;padding-top:5px;padding-bottom:5px}form #editImage img{width:100%;height:inherit;max-height:inherit;min-height:inherit}form #editImage:hover div.edit{display:block}form #addImage{display:block;width:300px;border:2px dashed #878787;cursor:pointer}form #addImage.hover{border-color:#d91a15;color:#d91a15}form #addImage.hover .iconImg{background-image:url("../images/add_image_hover.svg")}form #addImage .iconImg{display:block;margin:20px auto 10px;height:64px;width:64px;background-image:url("../images/add_image.svg");background-size:100%}form #addImage .txt{text-align:center;margin-bottom:20px}
