--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/list.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/list.html.twig
@@ -15,7 +15,7 @@
         <thead>
             <tr>
                 <th>Title</th>
-                <th>Ref</th>
+                <th>Menu</th>
                 <th>Language</th>
             </tr>
         </thead>
