--- a/src/gospelcenter/PageBundle/Resources/views/Page/index.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/index.html.twig
@@ -9,29 +9,33 @@
         <h1>{{ article.title }}</h1>
         <h2>{{ article.slogan }}</h2>
         
-        {% if article.slides|length > 1 %}<div id="left" class="arrow"></div>{% endif %}
+        <section class="slider" id="1">
         
-        {% for slide in article.slides %}
-            <article id="{{ loop.index }}" class="slide" {% if slide.image %}style="background-image: url('{{ asset(slide.image.webPath) }}')"{% endif %}>
-                <section class="content">
-                    <h1>{{ slide.title }}</h1>
-                    <p>{{ slide.text }}</p>
-                    {% if slide.link %}<p class="link"><a href="{{ slide.link }}" target="_blank">{% if slide.labelLink %}{{ slide.labelLink }}{% else %}{{ slide.link }}{% endif %}</a></p>{% endif %}
-                </section>
-            </article>
-        {% endfor %}
+            {% if article.slides|length > 1 %}<div id="left" class="arrow"></div>{% endif %}
+            
+            {% for slide in article.slides %}
+                <article id="{{ loop.index }}" class="slide" {% if slide.image %}style="background-image: url('{{ asset(slide.image.webPath) }}')"{% endif %}>
+                    <section class="content">
+                        <h1>{{ slide.title }}</h1>
+                        <p>{{ slide.text }}</p>
+                        {% if slide.link %}<p class="link"><a href="{{ slide.link }}" target="_blank">{% if slide.labelLink %}{{ slide.labelLink }}{% else %}{{ slide.link }}{% endif %}</a></p>{% endif %}
+                    </section>
+                </article>
+            {% endfor %}
+            
+            {% if article.slides|length > 1 %}<div id="right" class="arrow"></div>{% endif %}
+            
+            {% if article.slides|length > 1 %}
+                <nav id="slides">
+                    <ul>
+                        {% for slide in article.slides %}
+                            <li class="{% if loop.index == 1 %}current{% endif %}" data-slide="{{ loop.index }}"></li>
+                        {% endfor %}
+                    </ul>
+                </nav>
+            {% endif %}
         
-        {% if article.slides|length > 1 %}<div id="right" class="arrow"></div>{% endif %}
-        
-        {% if article.slides|length > 1 %}
-            <nav id="slides">
-                <ul>
-                    {% for slide in article.slides %}
-                        <li class="{% if loop.index == 1 %}current{% endif %}" data-slide="{{ loop.index }}"></li>
-                    {% endfor %}
-                </ul>
-            </nav>
-        {% endif %}
+        </section>
         
     </section>
 {% endblock %}
