--- a/web/css/home.css
+++ b/web/css/home.css
@@ -1,4 +1,1 @@
-#container.home {
-  height: 100%;
-  width: 100%;
-  background: url("../images/localBg.jpg"); }
+#container.home{height:100%;width:100%;background:url("../images/localBg.jpg")}
